--- a/creational_patterns/creational_patterns.ipynb
+++ b/creational_patterns/creational_patterns.ipynb
@@ -128,7 +128,7 @@
     "from IPython.display import Image\n",
     "Image(\"yinyang.jpg\", width=400)\n",
     "--->\n",
-    "<center><img src = \"abstract_factory.png\"  width=\"700\"></center>\n",
+    "<center><img src = \"images/abstract_factory.png\"  width=\"700\"></center>\n",
     "  <center> Credit: https://refactoring.guru/design-patterns/</center>"
    ]
   },
@@ -203,7 +203,7 @@
    "source": [
     "### 3 Builder:\n",
     "  * The intent of the Builder design pattern is to separate the construction of a complex object from its representation\n",
-    "<center><img src = \"builder_pattern.png\"  width=\"500\"></center>\n",
+    "<center><img src = \"images/builder_pattern.png\"  width=\"500\"></center>\n",
     " <center> Credit: https://refactoring.guru/design-patterns/</center>"
    ]
   },
@@ -291,7 +291,7 @@
    "source": [
     "#### Director and Builder:\n",
     "    A client can delegate the assembly to the director class, which knows how to use a builder to construct several of the most popular models of car. The Director defines the order in which to call construction steps. The director delegates the each construction step to a separate builder object that it has been given to the Director by the Client.\n",
-    "<center><img src = \"builder-comic.png\"  width=\"500\"></center>\n",
+    "<center><img src = \"images/builder-comic.png\"  width=\"500\"></center>\n",
     "<center> Credit: https://refactoring.guru/design-patterns/</center>"
    ]
   },
@@ -346,7 +346,7 @@
    "source": [
     "### 4. Prototype:\n",
     "  * A creational design pattern that lets you copy existing objects without making your code dependent on their classes.\n",
-    "  <center><img src = \"prototype-comic.png\"  width=\"500\"></center>\n",
+    "  <center><img src = \"images/prototype-comic.png\"  width=\"500\"></center>\n",
     "  <center> Credit: https://refactoring.guru/design-patterns/</center>"
    ]
   },
@@ -426,7 +426,7 @@
     "  *  restricts the instantiation of a class to one \"single\" instance. This is useful when exactly one object is needed to coordinate actions across the system. A implementation if the singleton pattern must:\n",
     "  - ensure that only one instance of the singleton class ever exists\n",
     "  - provide global access to that instance.\n",
-    "  <center><img src = \"singleton-comic.png\"  width=\"700\"></center>\n",
+    "  <center><img src = \"images/singleton-comic.png\"  width=\"700\"></center>\n",
     "  <center> Credit: https://refactoring.guru/design-patterns/</center>"
    ]
   },
@@ -467,7 +467,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Credit:\n",
+    "Credits to:\n",
     "  * https://refactoring.guru/design-patterns/\n",
     "  * https://www.tutorialspoint.com/python_design_patterns/index.htm"
    ]
@@ -489,7 +489,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.7.1"
   },
   "varInspector": {
    "cols": {
