--- a/creational_patterns/creational_patterns.ipynb
+++ b/creational_patterns/creational_patterns.ipynb
@@ -36,15 +36,7 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Racecar driving.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Factory pattern Example 1: Subclass redefine method\n",
     "class Car(object):\n",
@@ -67,6 +59,7 @@
     "    def drive(self):\n",
     "        print(\"Van driving.\")\n",
     "\n",
+    "        \n",
     "# Create object using factory.\n",
     "obj = Car.factory(\"Racecar\")\n",
     "obj.drive()"
@@ -76,15 +69,7 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "RaceCar driving at 100  km/h\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Factory pattern Example 2:Subclass redefine attribute\n",
     "class Car(object):\n",
@@ -113,6 +98,7 @@
     "        self.name = 'Van'\n",
     "        self.speed = '60'\n",
     "\n",
+    "        \n",
     "# Create object using factory.\n",
     "obj = Car.factory(\"Racecar\")\n",
     "obj.drive()"
@@ -123,28 +109,14 @@
    "metadata": {},
    "source": [
     "### 2. Abstract Factory:\n",
-    "  * The abstract factory pattern provides a way to encapsulate a group of individual factories that have a common theme without specifying their concrete classes. Use of this pattern makes it possible to interchange concrete implementations without changing the code that uses them, even at runtime.\n",
-    "<!---\n",
-    "from IPython.display import Image\n",
-    "Image(\"yinyang.jpg\", width=400)\n",
-    "--->\n",
-    "<center><img src = \"images/abstract_factory.png\"  width=\"700\"></center>\n",
-    "  <center> Credit: https://refactoring.guru/design-patterns/</center>"
+    "  * The abstract factory pattern provides a way to encapsulate a group of individual factories that have a common theme without specifying their concrete classes. Use of this pattern makes it possible to interchange concrete implementations without changing the code that uses them, even at runtime."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Automatic Van driving\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "licence = 'automatic'\n",
     "\n",
@@ -202,27 +174,14 @@
    "metadata": {},
    "source": [
     "### 3 Builder:\n",
-    "  * The intent of the Builder design pattern is to separate the construction of a complex object from its representation\n",
-    "<center><img src = \"images/builder_pattern.png\"  width=\"500\"></center>\n",
-    " <center> Credit: https://refactoring.guru/design-patterns/</center>"
+    "  * The intent of the Builder design pattern is to separate the construction of a complex object from its representation"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'A Red car with 3L engine, 4 wheels and 2 seats is moving.'"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "class Car(object):\n",
     "    def __init__(self):\n",
@@ -345,9 +304,7 @@
    "metadata": {},
    "source": [
     "### 4. Prototype:\n",
-    "  * A creational design pattern that lets you copy existing objects without making your code dependent on their classes.\n",
-    "  <center><img src = \"images/prototype-comic.png\"  width=\"500\"></center>\n",
-    "  <center> Credit: https://refactoring.guru/design-patterns/</center>"
+    "  * A creational design pattern that lets you copy existing objects without making your code dependent on their classes."
    ]
   },
   {
@@ -365,7 +322,7 @@
    ],
    "source": [
     "# Question 1: How to make a exact copy of a class?\n",
-    "# Factory pattern Example 1: Subclass redefine method\n",
+    "\n",
     "class Car(object):\n",
     "    \n",
     "    def drive(self):\n",
@@ -387,6 +344,7 @@
     "class Racecar(Car):\n",
     "    def drive(self):\n",
     "        print(\"Racecar driving.\")\n",
+    "        \n",
     "        \n",
     "class Van(Car):\n",
     "    def drive(self):\n",
@@ -456,6 +414,7 @@
     "            obj = Singleton._instance\n",
     "        return obj\n",
     "            \n",
+    "        \n",
     "s1 = Singleton()\n",
     "s1.name = 'Alan'\n",
     "s2 = Singleton()\n",
